# Deeprotection

./: ARCHITECTURE.md  CODE_OF_CONDUCT  CONTRIBUTING.md  Cargo.toml  PULL_REQUEST_TEMPLATE.md  README.md  check_env.sh  install.sh  main.rs
CONTRIBUTORS/: Code-Contributors.md  Design-Contributors.md  Documentation-Contributors.md  Other-Contributors.md  Testing-Contributors.md
README/: Bokmål.md  Dansk.md  Deutsch.md  Français.md  Italiano.md  Svenska.md  Русский.md  日本語.md  简体中文.md  繁體中文.md  한국어.md
patches/crossterm-0.28.1/: Cargo.toml
patches/crossterm-0.28.1/src/cursor/sys/: unix.rs
patches/crossterm-0.28.1/src/event/: filter.rs
source_code/: dp.rs  dplauncher.rs  dploader.rs
src/: builtins.rs  cd.rs  config.rs  executor.rs  expand.rs  interactive.rs  jobs.rs  logger.rs  main.rs  parser.rs  plugins.rs  protection.rs  rules.rs  syntax.rs  utils.rs
src/builtins/: alias.rs  basic.rs  bind.rs  cd.rs  complete.rs  control.rs  declare.rs  dirs.rs  echo.rs  enable_shopt.rs  exec_cmds.rs  fc.rs  getopts.rs  hash.rs  helpers.rs  info.rs  kill.rs  mapfile.rs  mod.rs  printf.rs  pwd.rs  read.rs  registry.rs  simple_cmds.rs  test_cmd.rs  ulimit.rs  vars.rs
src/config/: mod.rs
src/executor/: expand.rs  mod.rs
src/interactive/: bash_completer.rs  highlighter.rs  hinter.rs  mod.rs  smart_completer.rs
src/jobs/: mod.rs
src/logging/: mod.rs
src/parser/: expand_vars.rs  mod.rs  syntax.rs
src/security/: mod.rs  plugins.rs  protection.rs  rules.rs
src/shell/: mod.rs
