[package]
name = "dpshell"
version = "2.0.0"
edition = "2021"

[[bin]]
name = "dpshell"
path = "src/main.rs"

[dependencies]
chrono = "0.4"
rustyline = "14"
regex = "1.10"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
ctrlc = "3"
users = "0.11"
fluent = "0.16"
fluent-bundle = "0.15"
unic-langid = { version = "0.9", features = ["macros"] }
intl-memoizer = "0.5"
walkdir = "2.4"
terminal_size = "0.3"
sha2 = "0.10"
rpassword = "7"
libc = "0.2"
shlex = "1"
nix   = { version = "0.29", features = ["process", "signal"] }
glob = "0.3"
reedline = "0.35"
nucleo   = "0.5"
nu-ansi-term = "0.50"  # already a reedline transitive dep; explicit for style module
clap = { version = "4.6", features = ["derive", "wrap_help"] }
thiserror = "2.0"
itertools = "0.14"

[patch.crates-io]
crossterm = { path = "patches/crossterm-0.28.1" }